--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -25,6 +25,33 @@
 
 body {
   font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  color: var(--neutral-dark);
+}
+
+h1 {
+  font-size: 3.75rem;
+  font-weight: bold;
+}
+
+h2 {
+  font-size: 3.12rem;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+h4 {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+h5 {
+  font-size: 1.5rem;
+  font-weight: 500;
 }
 
 
