Se han extraido los datos de la API para project.html

--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -435,16 +435,19 @@ footer > nav ul li a {
 
 /* ------------------------------ Project main ------------------------------ */
 
-/* Your CSS code goes here */
-
+main img {
+  width: 50%;
+}
 /* ----------------------------------------------------------------------------- */
 /* ------------------------------ CONTACT-US html ------------------------------ */
 /* ----------------------------------------------------------------------------- */
 
 /* ------------------------------ Form ------------------------------ */
 
-form {
+#contact-us {
   /* border: #bb2937 solid 2px; */
+  width: 78%;
+  margin: auto;
 }
 
 #contact-us h1 {
