--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -25,7 +25,7 @@ body {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   color: var(--neutral-dark);
-  width: 90%;
+  /* width: 80%; */
   margin: auto;
   background-color: #f2f4fc;
 }
@@ -94,6 +94,8 @@ header {
   display: flex;
   flex-direction: column;
   margin-top: 3rem;
+  width: 80%;
+  margin: auto;
 }
 #logo-navbar {
   display: flex;
@@ -192,35 +194,43 @@ header nav a:hover {
   display: flex;
   justify-content: space-around;
   margin: 115px 0;
+  width: 80%;
+  margin: auto;
 }
 
 /* ------------------------------ Recent projects ------------------------------ */
 
+#recent-projects {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  margin: auto;
+}
+
 #recent-projects article img {
   width: 100%;
   height: 200px;
+  object-fit: cover;
 }
 
 #recent-projects article {
   width: 30%;
   background-color: white;
   margin-bottom: 150px;
-  height: 400px;
+  height: 100%;
 }
 
 #recent-projects article div {
   padding: 1.5rem;
 }
 
-#recent-projects {
-  display: flex;
-  flex-direction: column;
-}
+
 
 #articles-projects {
   display: flex;
   justify-content: space-between;
-  gap: 30px;
+  height: 600px;
+  /* gap: 5px; */
   flex-wrap: wrap;
 }
 
@@ -250,6 +260,9 @@ header nav a:hover {
   align-items: center;
   z-index: -5;
   height: 650px;
+  width: 80%;
+  margin: auto;
+  margin-top: 40px;
 }
 
 .emoji {
@@ -325,7 +338,7 @@ header nav a:hover {
 
 #services {
   /* max-width: 1200px; */
-  width: 90%;
+  width: 70%;
   height: 600px;
   margin: auto;
   margin-top: 100px;
@@ -335,9 +348,7 @@ header nav a:hover {
 #contain-services {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  gap: 10%;
-
+  justify-content: space-between;
   height: 100%;
   align-items: stretch;
 }
@@ -390,12 +401,37 @@ header nav a:hover {
   justify-content: center;
   align-items: center;
   padding: 8rem 0;
+  width: 80%;
+  margin: auto;
+  margin-top: 64px;
 }
 
 #questions-form h3,
 form {
   margin-top: 2rem;
   margin-bottom: 2rem;
+}
+
+#questions-form input {
+  border: none;
+  padding: 16px 24px;
+  margin-right: 16px;
+}
+
+#btn-sub {
+  padding: 50px;
+}
+
+#container-email-sub {
+  display: flex;
+}
+#icon-email {
+  height: 60px;
+  width: 60px;
+  background-color: white;
+  background-image: url(/resources/images/newsletter/icon/mail.svg);
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 /* ------------------------------ Footer ------------------------------ */
@@ -435,8 +471,26 @@ footer > nav ul li a {
 
 /* ------------------------------ Project main ------------------------------ */
 
+main {
+  width: 80%;
+  margin: auto;
+}
+
 main img {
-  width: 50%;
+  width: 100%;
+  height: 600px;
+  object-fit: cover;
+  margin: 64px 0;;
+}
+
+main div {
+  display: flex;
+  justify-content: space-between;
+}
+
+#body-project {
+  width: 80%;
+  margin: auto;
 }
 /* ----------------------------------------------------------------------------- */
 /* ------------------------------ CONTACT-US html ------------------------------ */
