--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -20,6 +20,9 @@
   /* Outline */
   /* outline: 1px solid #0000ff; */
 }
+html {
+  scroll-behavior:smooth;
+}
 
 body {
   font-family: "Roboto", sans-serif;
@@ -667,7 +670,163 @@ textarea {
 
 /* ------------------------- Smaller than 990px (tablet) ------------------------- */
 @media (max-width: 990px) {
-  /* Your CSS code goes here */
+   /* Menu hamburger */
+   #display-btn {
+    display: none;
+  }
+
+  .hamburger {
+    display: block;
+    z-index: 1;
+  }
+
+  .hamburger.active .bar:nth-child(2) {
+    opacity: 0;
+  }
+  .hamburger.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+  .hamburger.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
+
+  .nav-menu {
+    position: fixed;
+    left: -100%;
+    top: 70px;
+    flex-direction: column;
+    background-color: hsla(0, 0%, 78%);
+    ;
+    width: 100%;
+    text-align: center;
+    transition: 0.3s;
+  }
+
+  .nav-item {
+    margin: 16px 0;
+  }
+
+  .nav-menu.active {
+    left: 0;
+  }
+
+
+
+/* Tamaño de fuentes */
+h1 {
+  font-size: 3.5rem;
+}
+
+h2 {
+  font-size: 2.5rem;
+}
+
+h3 {
+  font-size: 2.5rem;
+  font-size: 300;
+}
+
+h4 {
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+h5 {
+  font-size: 1.6rem;
+}
+p {
+  font-size: 1.3rem;
+}
+
+/* main y header */
+#hero-section-header {
+  flex-direction: column;
+  align-items: center;
+}
+
+#container-text-hero {
+  width: 90%;
+  align-items: center;
+  text-align: center;
+}
+
+#container-img-hero {
+  height: 85vw;
+  width: 65vw;
+  margin-bottom: 88px;
+}
+
+main {
+  width: 100%;
+}
+
+header {
+  width: 100%;
+
+}
+
+#logo-navbar {
+  justify-content: space-between;
+  margin: 0 24px;
+  margin-top: 24px;
+}
+
+#card1 {
+  width: 18vw;
+  height: 31vw;
+
+}
+
+#card2 {
+  width: 31vw;
+  height: 29vw;
+}
+
+/* Sroll to top */
+#scroll-top {
+  display: none;
+}
+
+ /* Partners */
+ #partners {
+  display: block;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 50px;
+  width: 60%;
+  margin: auto;
+  justify-content: space-between;
+}
+
+.slider {
+  display: none;
+}
+
+/* Recent projects */
+#recent-projects {
+  width: 95%;
+}
+
+#recent-projects > h3 {
+  margin-top: 100px;
+}
+#articles-projects {
+  flex-wrap: nowrap;
+  gap: 16px;
+}
+
+/* Services */
+#services {
+  width: 95%;
+}
+
+#contain-services {
+  flex-wrap: nowrap;
+  gap: 16px;
+}
+
+
+
 }
 
 /* ------------------------- Smaller than 766px (mobile) ------------------------- */
